react-app/src/components/CSS/NoServerPage.css
/* MAIN CONTAINER COMPONENTS */
.NoServerPage-container {
  width: 100vw;
  height: 95%;
  position: absolute;
  left: 74px;
}

.NoServerPage-content-container {
  /* border: 1px solid red; */
  display: flex;
  flex-direction: row;
  height: 57rem;
}


/* NAV BAR COMPONENTS*/
.NoServerPage-NavBar {
  width: 100%;
  display: flex;
  background-color: #36393F;
  flex-direction: row;
  border: 1px solid #2C2F33;
  height: 3em;
  color: white;
  font-family: WhitneyLight, 'Helvetica Neue', 'Helvetica', 'Arial', 'sans-serif';
}


/* LEFT CONTAINER COMPONENTS*/
.NoServerPage-left-container {
  width: 344px;
  display: flex;
  flex-direction: column;
  padding: 2em;
  color: white;
  background-color: #2F3136;
}

.direct-chat-recipient{
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  padding: 3px;
  font-family: WhitneyMedium, 'Helvetica Neue', 'Helvetica', 'Arial', 'sans-serif';
}

.direct-chat-profile-pic {
  padding: 0px 5px 0px 0px;
  border-radius: 50%;
}

.empty_dms {
  position: relative;
}

/* MIDDLE CONTAINER COMPONENTS*/
.NoServerPage-middle-container {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  color: white;
  background-color: #36393F;
  font-family: WhitneyLight, 'Helvetica Neue', 'Helvetica', 'Arial', 'sans-serif';
}

.wumpus-image {
  position: relative;
  width: auto;
  height: 10em;
  margin-bottom: -16em;
  padding-bottom: 18em;
}

/* RIGHT CONTAINER COMPONENTS*/
.NoServerPage-right-container {
  display: flex;
  flex-direction: column;
  /* height: 100%; */
  padding: 1em;
  padding-right: 2em;
  margin-right: 4em;
  align-items: center;
  color: white;
  background-color: #2F3136;
  font-family: WhitneyLight, 'Helvetica Neue', 'Helvetica', 'Arial', 'sans-serif';
}

.server-users {
  width: 240px;
}

